update contents of REAME.md overview

--- a/README
+++ b/README
@@ -8,4 +8,4 @@ The ingredients file is here.
 
 ## Recipe
 
-Instructions for making the recipe go here. 
+Instructions for making the recipe go here. I will include prep time and procedures.
